[package]
name = "netidx-examples"
version = "0.31.1"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2024"
license = "MIT"
description = "netidx example programs"
homepage = "https://netidx.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx"
readme = "../README.md"
documentation = "https://docs.rs/netidx"
keywords = ["networking", "distributed", "kerberos", "tool"]
categories = ["network-programming"]

[dependencies]
netidx-core = { version = "0.31.10", path = "../netidx-core" }
netidx-netproto = { version = "0.31.10", path = "../netidx-netproto" }
netidx-value = { version = "0.31.10", path = "../netidx-value" }
netidx = { version = "0.31.10", path = "../netidx" }
netidx-archive = { version = "0.31.10", path = "../netidx-archive" }
netidx-protocols = { version = "0.31.10", path = "../netidx-protocols" }
netidx-container = { version = "0.31.10", path = "../netidx-container" }
netidx-derive = { version = "0.31.5", path = "../netidx-derive" }
netidx-wsproxy = { version = "0.31.10", path = "../netidx-wsproxy" }
env_logger = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
poolshark = { workspace = true }
rand = { workspace = true }
tempdir = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
ctrlc = { workspace = true }
arcstr = { workspace = true }
